FIX : 2주기 레이드 수정, 안쓰는 코드 정리